change colors for pange borders.

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,7 +73,7 @@ set -g mouse-select-window off
 
 # Set the default terminal mode to 256color mode
 # START:termcolor
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 # END:termcolor
 
 # enable activity alerts
@@ -104,10 +104,10 @@ set -g visual-activity on
 
 # pane colors
 # START:panecolors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg w
 # END:panecolors
 
 # Command / message line
@@ -213,8 +213,10 @@ set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-fg colour235
+set -g pane-border-bg black
+set-option -g pane-active-border-fg white
+set -g pane-active-border-bg colouR235 
 
 # message text
 set-option -g message-bg colour235 #base02
