uncomment the tmux-panes related things.

--- a/tmux.conf
+++ b/tmux.conf
@@ -150,10 +150,10 @@ setw -g mode-keys vi
 
 # Open panes in the same directory using the tmux-panes script 
 # START:tmuxpanes
-unbind v
-unbind h
-bind v send-keys " ~/.tmux/tmux-panes -h" C-m
-bind h send-keys " ~/.tmux/tmux-panes -v" C-m
+#unbind v
+#unbind h
+#bind v send-keys " ~/.tmux/tmux-panes -h" C-m
+#bind h send-keys " ~/.tmux/tmux-panes -v" C-m
 # END:tmuxpanes
 
 # Maximize and restore a pane
