add support for slim.
strip trailing whitespace on save.

--- a/tmux.conf
+++ b/tmux.conf
@@ -119,7 +119,7 @@ set -g visual-activity on
 
 # Status line left side
 # START:statusleft
-#set -g status-left-length 40 
+set -g status-left-length 25
 #set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 # END:statusleft
 
