aggressive resize we want.

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,6 +76,9 @@ set -g mouse-select-window off
 set -g default-terminal "screen-256color"
 # END:termcolor
 
+# aggressive resize on
+setw -g aggressive-resize on
+
 # enable activity alerts
 #START:activity
 setw -g monitor-activity on
