--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,40 @@
 [submodule "janus/solarized"]
 	path = janus/solarized
 	url = http://github.com/altercation/vim-colors-solarized.git
+  ignore = untracked
 [submodule "janus/slim"]
 	path = janus/slim
 	url = http://github.com/bbommarito/vim-slim.git
+  ignore = untracked
 [submodule "janus/less"]
 	path = janus/less
 	url = http://github.com/groenewege/vim-less.git
+  ignore = untracked
 [submodule "janus/vim-slime"]
 	path = janus/vim-slime
 	url = https://github.com/jpalardy/vim-slime.git
+  ignore = untracked
 [submodule "janus/vim-scratch"]
 	path = janus/vim-scratch
 	url = http://github.com/duff/vim-scratch.git
+  ignore = untracked
 [submodule "janus/vim-conque"]
 	path = janus/vim-conque
 	url = http://github.com/rson/vim-conque.git
+  ignore = untracked
 [submodule "janus/vim-ruby-conque"]
 	path = janus/vim-ruby-conque
 	url = http://github.com/sundbp/vim-ruby-conque.git
+  ignore = untracked
 [submodule "fonts/ubuntu-mono-powerline"]
 	path = fonts/ubuntu-mono-powerline
 	url = http://github.com/scotu/ubuntu-mono-powerline.git
+  ignore = untracked
 [submodule "janus/vim-powerline"]
 	path = janus/vim-powerline
 	url = http://github.com/skwp/vim-powerline.git
+  ignore = untracked
 [submodule "janus/autotag"]
 	path = janus/autotag
 	url = http://github.com/vim-scripts/AutoTag
+  ignore = untracked
