oops, added symlinks by mistake.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ vim/janus/vim/tools/gist/doc/tags
 vim/janus/vim/core/before/.netrwhist
 vim/_backup/
 vim/_temp/
+xsession.nt51p9393
+xsession.sundbp-N120
