--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 	path = janus/numbers.vim
 	url = https://github.com/myusuf3/numbers.vim.git
   ignore = untracked
+[submodule "emacs.d/my-pkgs/evil"]
+	path = emacs.d/my-pkgs/evil
+	url = git://gitorious.org/evil/evil.git
