Fix keybindings for ctrol-arrowkeys in emacs (tmux or no tmux)

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,12 +2,12 @@
 
 # Setting the prefix from C-b to C-a
 # START:prefix
-set -g prefix C-a  
+set -g prefix C-a
 # END:prefix
 
 # Free the original Ctrl-b prefix keybinding
 # START:unbind
-unbind C-b 
+unbind C-b
 # END:unbind
 
 #setting the delay between prefix and command
@@ -151,7 +151,9 @@ set -g status-justify centre
 setw -g mode-keys vi
 # END:vikeys
 
-# Open panes in the same directory using the tmux-panes script 
+setw -g xterm-keys on
+
+# Open panes in the same directory using the tmux-panes script
 # START:tmuxpanes
 #unbind v
 #unbind h
@@ -182,19 +184,19 @@ setw -g automatic-rename
 # Left side of status bar
 #set -g status-left-length 20
 set -g status-left '[#S:#H]'
- 
+
 # Inactive windows in status bar
 set-window-option -g window-status-format '#I:#[default]#W#F'
- 
+
 # Current or active window in status bar
 set-window-option -g window-status-current-format '#[bold]#I:#W#F'
- 
+
 # Alerted window in status bar. Windows which have an alert (bell, activity or content).
-#set-window-option -g window-status-alert-bg white 
- 
+#set-window-option -g window-status-alert-bg white
+
 # Right side of status bar
 set -g status-right-length 50
-set -g status-right '%Y-%m-%d %H:%M #[fg=white]| #[fg=blue,bright]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white]| #[fg=blue,bright]#(cut -d " " -f 1-4 /proc/loadavg) ' 
+set -g status-right '%Y-%m-%d %H:%M #[fg=white]| #[fg=blue,bright]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white]| #[fg=blue,bright]#(cut -d " " -f 1-4 /proc/loadavg) '
 
 set -g set-titles-string "tmux:#I #W"
 
