--- a/tmux.conf
+++ b/tmux.conf
@@ -122,7 +122,7 @@ set -g visual-activity on
 
 # Status line left side
 # START:statusleft
-set -g status-left-length 25
+#set -g status-left-length 25
 #set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 # END:statusleft
 
@@ -183,7 +183,10 @@ setw -g automatic-rename
 
 # Left side of status bar
 #set -g status-left-length 20
-set -g status-left '[#S:#H]'
+#set -g status-left '[#S:#H]'
+set -g status-left-length 60
+set-option -g status-left "#(~/.tmux/tmux-powerline/status-left.sh)"
+#set-option -g status-right "#(~/dev/tmux-powerline/status-right.sh)"
 
 # Inactive windows in status bar
 set-window-option -g window-status-format '#I:#[default]#W#F'
