--- a/.gitmodules
+++ b/.gitmodules
@@ -51,3 +51,6 @@
 [submodule "tmux/tmux-powerline"]
 	path = tmux/tmux-powerline
 	url = https://github.com/erikw/tmux-powerline.git
+[submodule "live-packs/sundbp-pack/vendor/submodules/ag"]
+	path = live-packs/sundbp-pack/vendor/submodules/ag
+	url = https://github.com/Wilfred/ag.el.git
