Various changes related new host setup.

--- a/tmux.conf
+++ b/tmux.conf
@@ -127,7 +127,9 @@ set -g visual-activity on
 # END:statusleft
 
 #START:utf8
+setw -g utf8 on
 set -g status-utf8 on
+set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 #END:utf8
 
 # Status line right side
@@ -185,8 +187,9 @@ setw -g automatic-rename
 #set -g status-left-length 20
 #set -g status-left '[#S:#H]'
 set -g status-left-length 60
-set-option -g status-left "#(~/.tmux/tmux-powerline/status-left.sh)"
-#set-option -g status-right "#(~/dev/tmux-powerline/status-right.sh)"
+set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
+#set-option -g status-right-length 90
+#set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
 
 # Inactive windows in status bar
 set-window-option -g window-status-format '#I:#[default]#W#F'
