fix some tmux colors.

--- a/tmux.conf
+++ b/tmux.conf
@@ -202,7 +202,7 @@ set-window-option -g window-status-current-format '#[bold]#I:#W#F'
 
 # Right side of status bar
 set -g status-right-length 50
-set -g status-right '%Y-%m-%d %H:%M #[fg=white]| #[fg=blue,bright]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white]| #[fg=blue,bright]#(cut -d " " -f 1-4 /proc/loadavg) '
+set -g status-right '%Y-%m-%d %H:%M #[fg=blue,bright]| #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") | #(cut -d " " -f 1-4 /proc/loadavg) '
 
 set -g set-titles-string "tmux:#I #W"
 
