--- a/upstart-scripts/delegate.conf
+++ b/upstart-scripts/delegate.conf
@@ -13,6 +13,6 @@ expect fork
 
 script
 bash << "EOF"
-  /usr/local/bin/dg -P9201 ADMIN=patrik.sundberg@gmail.com PROXY=bcproxy.glennt.london.glencore.com:80:* FORWARD=http://pts:so0Densk7@bcproxy.glennt.london.glencore.com:80 RES_WAIT=0 REMITTABLE="*"
+  /usr/local/bin/dg -P9201 ADMIN=patrik.sundberg@gmail.com PROXY=bcproxy.glennt.london.glencore.com:80:* FORWARD=http://pts:xxx@bcproxy.glennt.london.glencore.com:80 RES_WAIT=0 REMITTABLE="*"
 EOF
 end script
