--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "live-packs/sundbp-pack/vendor/submodules/fringe-helper"]
 	path = live-packs/sundbp-pack/vendor/submodules/fringe-helper
 	url = https://github.com/nschum/fringe-helper.el.git
+[submodule "live-packs/solarized-pack"]
+	path = live-packs/solarized-pack
+	url = https://github.com/siancu/solarized-pack.git
