--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "live-packs/solarized-pack"]
 	path = live-packs/solarized-pack
 	url = https://github.com/siancu/solarized-pack.git
+[submodule "live-packs/sundbp-pack/vendor/submodules/emmet-mode"]
+	path = live-packs/sundbp-pack/vendor/submodules/emmet-mode
+	url = https://github.com/smihica/emmet-mode.git
