--- a/tmux.conf
+++ b/tmux.conf
@@ -82,58 +82,11 @@ setw -g monitor-activity on
 set -g visual-activity on
 #END:activity
 
-# set the status line's colors
-# START:statuscolor
-#set -g status-fg white
-#set -g status-bg black
-# END:statuscolor
-
-# set the color of the window list
-# START:windowstatuscolor
-#setw -g window-status-fg cyan
-#setw -g window-status-bg default
-#setw -g window-status-attr dim
-# END:windowstatuscolor
-
-# set colors for the active window
-# START:activewindowstatuscolor
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-# END:activewindowstatuscolor
-
-# pane colors
-# START:panecolors
-#set -g pane-border-fg green
-#set -g pane-border-bg black
-#set -g pane-active-border-fg white
-#set -g pane-active-border-bg w
-# END:panecolors
-
-# Command / message line
-# START:cmdlinecolors
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
-# END:cmdlinecolors
-
-# Status line left side
-# START:statusleft
-#set -g status-left-length 25
-#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-# END:statusleft
-
 #START:utf8
 setw -g utf8 on
 set -g status-utf8 on
 set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 #END:utf8
-
-# Status line right side
-# 15% | 28 Nov 18:15
-# START: statusright
-#set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
-# END:statusright
 
 # Update the status bar every sixty seconds
 # START:updateinterval
@@ -151,14 +104,6 @@ setw -g mode-keys vi
 # END:vikeys
 
 setw -g xterm-keys on
-
-# Open panes in the same directory using the tmux-panes script
-# START:tmuxpanes
-#unbind v
-#unbind h
-#bind v send-keys " ~/.tmux/tmux-panes -h" C-m
-#bind h send-keys " ~/.tmux/tmux-panes -v" C-m
-# END:tmuxpanes
 
 # Maximize and restore a pane
 # START:max
@@ -181,12 +126,8 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 setw -g automatic-rename
 
 # Left side of status bar
-#set -g status-left-length 20
-#set -g status-left '[#S:#H]'
-set -g status-left-length 60
-set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
-#set-option -g status-right-length 90
-#set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
+set -g status-left-length 20
+set -g status-left '[#S:#H]'
 
 # Inactive windows in status bar
 set-window-option -g window-status-format '#I:#[default]#W#F'
