prefer status at the bottom.

--- a/tmux.conf
+++ b/tmux.conf
@@ -144,6 +144,8 @@ set -g status-right '%Y-%m-%d %H:%M #[fg=blue,bright]| #(uptime | cut -f 4-5 -d 
 
 set -g set-titles-string "tmux:#I #W"
 
+set-option -g status-position bottom
+
 #### COLOUR
 
 # default statusbar colors
