ignore fisherman packages.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,70 @@ lein/repl-port
 /lein/credentials.clj.gpg
 /lein/repl-history
 /live-packs/sundbp-pack/config/my-clojure.elc
+/bin/fly
+/fish/completions/debug.fish
+/fish/completions/fisher.fish
+/fish/completions/get.fish
+/fish/completions/nvm.fish
+/fish/completions/rbenv.fish
+/fish/conf.d/javahome.fish
+/fish/conf.d/rbenv.fish
+/fish/conf.d/thefuck.init.fish
+/fish/conf.d/z.fish
+/fish/functions/__bass.py
+/fish/functions/__can_run_command.fish
+/fish/functions/__fzf_cd.fish
+/fish/functions/__fzf_cd_with_hidden.fish
+/fish/functions/__fzf_find_and_execute.fish
+/fish/functions/__fzf_find_file.fish
+/fish/functions/__fzf_install.fish
+/fish/functions/__fzf_reverse_isearch.fish
+/fish/functions/__fzf_uninstall.fish
+/fish/functions/__fzf_update.fish
+/fish/functions/__fzfcmd.fish
+/fish/functions/__nvm_run.fish
+/fish/functions/__tf_updt.fish
+/fish/functions/__z.fish
+/fish/functions/__z_add.fish
+/fish/functions/__z_complete.fish
+/fish/functions/__zo.fish
+/fish/functions/_grc_wrap.fish
+/fish/functions/await.fish
+/fish/functions/bass.fish
+/fish/functions/cat.fish
+/fish/functions/cvs.fish
+/fish/functions/debug.fish
+/fish/functions/df.fish
+/fish/functions/diff.fish
+/fish/functions/dig.fish
+/fish/functions/fish_prompt.fish
+/fish/functions/fish_user_key_bindings.fish
+/fish/functions/fisher.fish
+/fish/functions/fuck.fish
+/fish/functions/fzf_key_bindings.fish
+/fish/functions/g++.fish
+/fish/functions/gcc.fish
+/fish/functions/get.fish
+/fish/functions/getopts.fish
+/fish/functions/ifconfig.fish
+/fish/functions/last_job_id.fish
+/fish/functions/ls.fish
+/fish/functions/make.fish
+/fish/functions/mount.fish
+/fish/functions/mtr.fish
+/fish/functions/netstat.fish
+/fish/functions/node.fish
+/fish/functions/npm.fish
+/fish/functions/npx.fish
+/fish/functions/nvm.fish
+/fish/functions/ping.fish
+/fish/functions/ps.fish
+/fish/functions/rbenv.fish
+/fish/functions/tail.fish
+/fish/functions/thefuck-command-line.fish
+/fish/functions/traceroute.fish
+/fish/functions/wdiff.fish
+/fish/functions/yarn.fish
+/fish/functions/z.awk
+/fish/functions/zadd.awk
+
