--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 	path = janus/numbers.vim
 	url = https://github.com/myusuf3/numbers.vim.git
   ignore = untracked
+[submodule "fish-submodules/fish-kubectl-completions"]
+	path = fish-submodules/fish-kubectl-completions
+	url = https://github.com/evanlucas/fish-kubectl-completions
